added lots of posts

--- a/_posts/2012-03-14-blowfish.md
+++ b/_posts/2012-03-14-blowfish.md
@@ -1,24 +1,63 @@
 ---
 title: Blowfish password encryption
 layout: post
+tags:
+- php
 ---
 
-blabl
+Since 5.3 PHP supports Blowfish hashing. This is commonly seen as the most secure way to hash a password. The main advantage is that the function can be set to be really slow which makes brute forcing useless.
+
+Here's an example implementation:
+
 {% highlight php %}
 <?
-class PhoneNumberUtil {
-  // Format types:
-  const E164; // +31651245374
-  const INTERNATIONAL; // +31 6 51245374
-  const NATIONAL; // 06 51245374
-  const RFC3966; // +31-6-51245374
+
+class BlowfishPassword {
+  const strength = 13; // On our machine this makes it slow but not so slow as to annoy the user (less then 1 second).
+
+  private $hash;
+
+  public function __construct($password, $hash = false) {
+    if ($hash !== false) {
+      $this->hash = $hash;
+    } else {
+      $salt = $salt = str_random(21, '\.\/0-9A-Za-z'); // Random per password salt.
+
+      $strength = sprintf('%02d', $this::strength); // Always needs to be 2 characters.
+
+      $this->hash = crypt($password, '$2a$' . $strength . '$' . $salt . '$');
+    }
+  }
+
+  public function equals($password) {
+    $salt = substr($this->hash, 0, 28);
+
+    return ($this->hash == crypt($password, $salt . '$'));
+  }
+
+  public function getHash() {
+    return $this->hash;
+  }
 }
 {% endhighlight %}
 
-and a list:
------------
+The `str_random()` function is implemented like this:
 
-* the first item
-* the second item
+{% highlight php %}
+<?
+function str_random($length, $range = true) {
+  $r = '';
 
-ok
+  while ($length > 0) {
+    $c = chr(rand(32, 126));
+
+    if (($range === true) || (preg_match('/['.$range.']/', $c) == 1)) {
+      $r .= $c;
+      --$length;
+    }
+  }
+
+  return $r;
+}
+{% endhighlight %}
+
