--- a/_posts/2012-03-15-favicon.md
+++ b/_posts/2012-03-15-favicon.md
@@ -14,3 +14,14 @@ For my company we have an ad-server which handles hundreds of connections per se
 
 This is the smalles possible image in a data url. A 1x1 gif. Even though data url's aren't support in IE versions before 9 we hardly notice any requests for favicon.ico anymore (Maybe IE doesn't request favicon's for iframes?).
 
+Update *2012-03-17* 
+-------------------
+
+After some experimenting I found out that the following code seems to do the trick as well:
+
+{% highlight html %}
+<link rel="shortcut icon" href="_">
+{% endhighlight %}
+
+We are still seeing some requests for `favicon.ico` but they seem to be mostly from older versions of Firefox (3.x.x).
+
