--- a/_posts/2012-03-14-blowfish.md
+++ b/_posts/2012-03-14-blowfish.md
@@ -1,8 +1,7 @@
 ---
 title: Blowfish password encryption
 layout: post
-tags:
-- php
+keywords: php blowfish password
 ---
 
 Since 5.3 PHP supports Blowfish hashing. This is commonly seen as the most secure way to hash a password. The main advantage is that the function can be set to be really slow which makes brute forcing useless.
