--- a/_posts/2012-03-15-favicon.md
+++ b/_posts/2012-03-15-favicon.md
@@ -1,9 +1,7 @@
 ---
 title: Ad server favicons
 layout: post
-tags:
-- http
-- html
+keywords: favicon http html
 ---
 
 For my company we have an ad-server which handles hundreds of connections per second. Many of those are HTML iframes for ads. It doesn't really make sense for those pages to have a favicon but we noticed that many browses still request favicon.ico. This only ads load to our already busy server so we place the following code in our iframe HTML:
