Added php use keyword post
- fixed list style
- modified favicon post
- added stub for syn cookies post

--- a/_posts/2012-03-15-favicon.md
+++ b/_posts/2012-03-15-favicon.md
@@ -1,5 +1,5 @@
 ---
-title: Ad server favicons
+title: High performance favicons
 layout: post
 keywords: favicon http html
 ---
@@ -12,14 +12,27 @@ For my company we have an ad-server which handles hundreds of connections per se
 
 This is the smalles possible image in a data url. A 1x1 gif. Even though data url's aren't support in IE versions before 9 we hardly notice any requests for favicon.ico anymore (Maybe IE doesn't request favicon's for iframes?).
 
-Update *2012-03-17* 
+{% comment %}
+Update *2012-04-07* 
 -------------------
 
 After some experimenting I found out that the following code seems to do the trick as well:
 
 {% highlight html %}
-<link rel="shortcut icon" href="_">
+<link rel="shortcut icon" href="about:blank">
 {% endhighlight %}
 
-We are still seeing some requests for `favicon.ico` but they seem to be mostly from older versions of Firefox (3.x.x).
+sed 's/[^+]*.....//' favicon.txt | sort | uniq -c | sort -n | less
+
+one week:
+    830 Mozilla/5.0 (Windows NT 6.1; rv:11.0) Gecko/20100101 Firefox/11.0
+    899 Mozilla/5.0 (Windows; U; Windows NT 6.1; fr; rv:1.9.2.28) Gecko/20120306 Firefox/3.6.28
+    910 Opera/9.80 (Windows NT 6.1; U; en) Presto/2.10.229 Version/11.61
+   1171 Mozilla/5.0 (Windows NT 5.1; rv:11.0) Gecko/20100101 Firefox/11.0
+   1234 Opera/9.80 (Windows NT 6.1; U; fr) Presto/2.10.229 Version/11.61
+   1240 Mozilla/5.0 (compatible; Google Desktop/5.9.1005.12335; http://desktop.google.com/)
+   1439 Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; WOW64; Trident/5.0)
+   1809 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0) Gecko/20100101 Firefox/11.0
+
+{% endcomment %}
 
