Updated favicon post, added node try/catch post
- added RSS icon/link

--- a/_posts/2012-03-15-favicon.md
+++ b/_posts/2012-03-15-favicon.md
@@ -1,5 +1,5 @@
 ---
-title: High performance favicons
+title: High performance favicons (updated 2012-04-16)
 layout: post
 keywords: favicon http html
 ---
@@ -12,27 +12,77 @@ For my company we have an ad-server which handles hundreds of connections per se
 
 This is the smalles possible image in a data url. A 1x1 gif. Even though data url's aren't support in IE versions before 9 we hardly notice any requests for favicon.ico anymore (Maybe IE doesn't request favicon's for iframes?).
 
-{% comment %}
-Update *2012-04-07* 
+Update *2012-04-16* 
 -------------------
 
-After some experimenting I found out that the following code seems to do the trick as well:
+Some days ago I had the idea for a even smaller favicon, namely `about:blank`
 
 {% highlight html %}
 <link rel="shortcut icon" href="about:blank">
 {% endhighlight %}
 
-sed 's/[^+]*.....//' favicon.txt | sort | uniq -c | sort -n | less
+I have tested all the options for a couple of days and collected the following data:
 
-one week:
-    830 Mozilla/5.0 (Windows NT 6.1; rv:11.0) Gecko/20100101 Firefox/11.0
-    899 Mozilla/5.0 (Windows; U; Windows NT 6.1; fr; rv:1.9.2.28) Gecko/20120306 Firefox/3.6.28
-    910 Opera/9.80 (Windows NT 6.1; U; en) Presto/2.10.229 Version/11.61
-   1171 Mozilla/5.0 (Windows NT 5.1; rv:11.0) Gecko/20100101 Firefox/11.0
-   1234 Opera/9.80 (Windows NT 6.1; U; fr) Presto/2.10.229 Version/11.61
-   1240 Mozilla/5.0 (compatible; Google Desktop/5.9.1005.12335; http://desktop.google.com/)
-   1439 Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; WOW64; Trident/5.0)
-   1809 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0) Gecko/20100101 Firefox/11.0
+#### No favicon in the html
+`6752` requests per hour.
 
+ * 48% Chrome
+ * 42% Firefox
+ * 10% IE
+
+#### `about:blank`
+`252` requests per hour.
+
+ * 50% Firefox
+ * 22% Opera
+ * 15% IE
+ * 13% Google Desktop
+
+#### Data URL
+`106` requests per hour.
+
+ * 100% IE
+
+
+{% comment %}
+==> favicon-aboutblank.txt <==
+Wed, 21 Mar 2012 13:50:21 +0100Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0) Gecko/20100101 Firefox/11.0
+Tue, 27 Mar 2012 11:56:46 +0200Mozilla/5.0 (Windows; U; Windows NT 6.0; fr; rv:1.9.2.25) Gecko/20111212 Firefox/3.6.25 (.NET CLR 3.5.30729
+35827
+142 uur
+252 per uur
+
+1809 + 1171 + 899 + 830 = 4709 / 95.32 = 50% firefox
+1439 / 95.32 = 15% ie
+1240 / 95.32 = 13% google desktop
+2144 / 95.32 = 22% opera
+
+4709 + 1439 + 1240 + 2144 = 9532
+
+
+
+==> favicon-dataurl.txt <==
+Sat, 07 Apr 2012 21:44:19 +0200Mozilla/5.0 (Windows; U; Windows NT 5.1; fr; rv:1.9.0.19) Gecko/2010031422 Firefox/3.0.19
+Mon, 16 Apr 2012 12:23:53 +0200Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0; FunWebProducts)
+21328
+201 uur
+106 per uur
+
+100% ie
+
+
+==> favicon-none.txt <==
+Sat, 07 Apr 2012 15:55:51 +0200Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:11.0) Gecko/20100101 Firefox/11.0
+Sat, 07 Apr 2012 21:31:23 +0200Mozilla/5.0 (Windows NT 6.1) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.151 Safari/535.19
+37138
+5.5 uur
+6752 per uur
+
+4718 + 2100 + 2000 = 8818 / 185.23 = 48% chrome
+3425 + 1902 + 1396 + 1140 = 7863 / 185.23 = 42% firefox
+1842 / 185.23 = 10% ie
+less then 1% other
+
+8818 + 7863 + 1842 = 18523
 {% endcomment %}
 
