fixed blowfish post

--- a/_posts/2012-03-14-blowfish.md
+++ b/_posts/2012-03-14-blowfish.md
@@ -20,7 +20,7 @@ class BlowfishPassword {
     if ($hash !== false) {
       $this->hash = $hash;
     } else {
-      $salt = $salt = str_random(21, '\.\/0-9A-Za-z'); // Random per password salt.
+      $salt = str_random(22, '\.\/0-9A-Za-z'); // Random per password salt.
 
       $strength = sprintf('%02d', $this::strength); // Always needs to be 2 characters.
 
@@ -29,9 +29,7 @@ class BlowfishPassword {
   }
 
   public function equals($password) {
-    $salt = substr($this->hash, 0, 28);
-
-    return ($this->hash == crypt($password, $salt . '$'));
+    return ($this->hash === crypt($password, $this->hash));
   }
 
   public function getHash() {
