Added 204 cookie post

--- a/_posts/2012-11-25-302-cookie.md
+++ b/_posts/2012-11-25-302-cookie.md
@@ -2,7 +2,7 @@
 published: true
 title: 302 redirects and cookies
 layout: post
-keywords: 302 header redirect cookie 301
+keywords: 302 header redirect cookie 301 http
 ---
 
 When working on a project I was wondering if all browsers would accept cookies set in http redirects. After searching for a bit I found some contradicting articles and [bug](http://code.google.com/p/chromium/issues/detail?id=150066) [reports](https://bugs.webkit.org/show_bug.cgi?id=3512) indicating that this might not always be the case. So I decided to test this in a lot of browsers and post the results online for others to find.
