Added post about faster queues

--- a/_posts/2015-04-06-go-queue.md
+++ b/_posts/2015-04-06-go-queue.md
@@ -32,6 +32,7 @@ To test this I wrote the following simple program.
 
 {% highlight go %}
 package main
+
 import (
   "fmt"
   "time"
@@ -40,21 +41,21 @@ import (
 
 func main() {
   t := time.Tick(time.Second)
-  a := make(Intqueue, 0)
+  q := make(Intqueue, 0)
 
   for i := 1; i > 0; i++ {
-    a.Add(i)
+    q.Add(i)
     i++
 
-    if len(a) > 10 {
-      a.Remove()
+    if len(q) > 10 {
+      q.Remove()
     }
 
     select {
     case <-t:
       var m runtime.MemStats
       runtime.ReadMemStats(&m)
-      fmt.Printf("cap: %d, len: %d, used: %d\n", cap(a), len(a), m.Alloc)
+      fmt.Printf("cap: %d, len: %d, used: %d\n", cap(q), len(q), m.Alloc)
     default:
     }
   }
@@ -83,4 +84,6 @@ Conclusion
 ===========
 
 As you can see the Go runtime is smart enough not to keep increasing the underlying array. Instead the slice capacity and memory usage keep quite constant.
+
+For an update see: [Faster queues in Go](/2015/04/25/go-faster-queue.html)
 
